z-index fixed on top cards and nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ nav {
     position: fixed;
     top: 0;
     background-color: 454A4F;
-    z-index: 0;
+    z-index: 5;
     /*opacity: 1;*/
 }
 
@@ -101,7 +101,7 @@ nav {
 #card-1 {
     width: 400px;
     right: 6vw;
-    z-index: -1;
+    z-index: 0;
     /*margin-left: 15px;*/
     /*display: inline-block;*/
     /*margin-top: 80px;*/
@@ -111,7 +111,7 @@ nav {
 #card-2 {
     width: 400px;
     left: 11vw;
-    z-index: -1
+    z-index: 0;
     /*float: right;*/
     /*margin-right: 15px;
     margin-top: 80px;*/
@@ -144,6 +144,7 @@ nav {
 
 #card-top{
     margin-top: 70px;
+    z-index: -1;
 }
 
 #card-bottom{
